# word_puzzles

./: .dev.env  Cargo.toml  Dockerfile  README.md
web/: Cargo.toml
web/assets/: script.js  styles.css
web/assets/fonts/: inter.css
web/src/: app_state.rs  main.rs
web/src/api/: mod.rs
web/src/assets/: assets_metadata.rs  mod.rs
web/src/routes/: assets.rs  index.rs  mod.rs
web/src/routes/games/: mod.rs  spelling_bee.rs
web/src/templates/: html_template.rs  layout.rs  mod.rs
web/src/templates/spelling_bee/: container.rs  container_game_mode.rs  input.rs  mod.rs  solution.rs
web/src/utils/: mod.rs  modify_query.rs
words/: Cargo.toml
words/src/: lib.rs  main.rs  trie.rs  word.rs  words.rs  words_dict.rs  words_file.rs  words_shortcuts.rs
words/src/games/: letter_boxed.rs  mod.rs  spelling_bee.rs
