[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
words = { path = "../words" }
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
anyhow = "1.0.75"
axum = "0.6.20"
tower-http = { version = "0.4.4", features = [
  "compression-gzip",
  "compression-deflate",
  "compression-br",
  "compression-zstd",
] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
rust-embed = { version = "8.0.0", features = [
  "include-exclude",
  "compression",
  "mime-guess",
] }
hex = { version = "0.4.3" }
chrono = { version = "0.4.31", features = ["serde"] }
maud = "0.25.0"
