[package]
name = "web"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
words = { path = "../words" }
anyhow = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
axum = "0.7.5"
axum-macros = { version = "0.4.1" }
axum-htmx = { version = "0.5.0" }
tower-http = { version = "0.5.2", features = [
  "compression-gzip",
  "compression-deflate",
  "compression-br",
  "compression-zstd",
  "cors",
] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
rust-embed = { version = "8.4.0", features = [
  "include-exclude",
  "compression",
  "mime-guess",
] }
hex = { version = "0.4.3" }
chrono = { version = "0.4.38", features = ["serde"] }
maud = { version = "0.26.0", features = ["axum"] }
url = "2.5.2"
simple-server-timing-header = "0.1.1"
